--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="logic.js"></script>
+    <script src="p5.min.js"></script>
     <title>Catformer</title>
   </head>
   <body>
