simple html and css
just some basic structure

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <title>Catformer</title>
   </head>
   <body>
-    <h1 id="mainTitle">Loading</h1>
+    <div class="container">
+      <h1 id="mainTitle">Loading</h1>
+      <main></main>
+      <aside>
+        <h3>Contols</h3>
+        <p>
+          Left arrow: Move to the left<br />
+          Right arrow: Move to the right <br />
+          Space bar: Jump
+        </p>
+      </aside>
+    </div>
   </body>
 </html>
