--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body>
     <div class="container">
-        <h1>Catformer</h1>
-        <h1 id="mainTitle">Loading</h1>
+        <!-- <h1>Catformer</h1> -->
+        <!-- <h1 id="mainTitle">Loading</h1> -->
         <main></main>
         <div class="asideContainer">
             <aside id="gameDescription">
