Fixed scoreboard and second image
The scoreboard now displays correctly. you need to write your name at the bottom in order to participate. The cactus is now also able to load a different sprite

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
           </p>
         </aside>
       </div>
+      <div>
+        <h3>Player name</h3>
+        <input id="userName" placeholder="" type="text" />
+      </div>
     </div>
   </body>
 </html>
