small design changes

--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@400;500;800&family=Exo:ital,wght@0,800;1,800&family=Fredoka+One&family=Fugaz+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,800;1,800&family=Josefin+Sans:wght@300&display=swap"
       rel="stylesheet"
     />
     <script src="logic.js"></script>
@@ -20,16 +18,10 @@
 
   <body>
     <div class="container">
-      <!-- <h1>Catformer</h1> -->
-      <!-- <h1 id="mainTitle">Loading</h1> -->
       <main></main>
       <div class="asideContainer">
         <aside id="gameDescription">
           <h3>Goal</h3>
-          <!-- <p>
-                    Cats love mischief, this is known. In Catformer, your mission is to find a beautiful yet fragile vase and knock it down before your owner is coming back. But beware the obsticales on your journey (especially the scary cleaning monster) for they will only
-                    slow you down.
-                </p> -->
           <p>
             Find and destroy the vase before the time runs out. The faster you
             are, the more superior of a cat.
@@ -43,10 +35,10 @@
             <strong>Z:</strong> Jump
           </p>
         </aside>
-      </div>
-      <div>
-        <h3>Player name</h3>
-        <input id="userName" placeholder="" type="text" />
+        <aside id="nameInput">
+          <h3>Insert your name</h3>
+          <input id="userName" placeholder="" type="text" />
+        </aside>
       </div>
     </div>
   </body>
